--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,344 @@
 /* место для вашего кода */
+body {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  color: rgb(0,0,0);
+}
+
+.header {
+  padding: 92px 50px 96px;
+  font-size: 18px;
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+  align-items: center;
+}
+
+
+.header-menu {
+  line-height: 21.13px;
+  justify-self: start;
+}
+
+.header__links-list {
+  display: flex;
+  gap: 32px;
+  flex-wrap: wrap;
+}
+
+.header__links-list-item {
+  list-style: circle;
+}
+
+.header__links-list-item:nth-child(2) {
+  padding-right: 3px;
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none;
+}
+
+.header-menu-link {
+  text-decoration: underline;
+  text-underline-offset: 4px;
+}
+
+.header-logo {
+  display: block;
+  width: 136px;
+  height: 107px;
+}
+
+
+.header-logo-image {
+  width: 136px;
+  height: 107px;
+}
+
+.adress {
+  line-height: 24.3px;
+}
+
+.header__address {
+  justify-self: end;
+  max-width: 240px;
+}
+
+.phone {
+  text-decoration: none;
+  border-bottom: 1px solid black;
+}
+
+.email {
+  text-decoration: none;
+  border-bottom: 1px solid black;
+}
+
+.cover {
+  margin-bottom: 180px;
+  color: rgb(255,255,255);
+  background-image: url(../images/cover.jpg);
+  background-repeat: no-repeat;
+  background-size: 125% auto;
+  background-position: center;
+  min-height: 757px;
+  height: 100%;
+  position: relative;
+
+}
+/* используется и для секции cover и для сексии lots */
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 0;
+}
+
+.cover-content {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  padding-left: 50px;
+  padding-right: 20px;
+  min-height: 100%;
+  min-width: 100%;
+  position: absolute;
+
+}
+
+.cover-title {
+  font-size: 100px;
+  font-weight: 700;
+  line-height: 115px;
+  padding-top: 115px;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 30px;
+}
+
+.cover-title span {
+  display: block;
+}
+
+.aligned-text {
+  margin-bottom: 20px;
+}
+
+.aligned-text_center {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.aligned-text_right {
+  text-align: end;
+}
+
+.cover__description {
+  padding-right: 30px;
+  margin-top: 106px;
+  font-size: 22px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.cover__description-text {
+  line-height: 28px;
+  text-transform: uppercase;
+  word-spacing: 18.5px;
+}
+
+.bet-button {
+  line-height: 25.83px;;
+  font-weight: 500;
+  color: rgb(255,255,255);
+  background-color: rgba(255, 255, 255, 0);
+  border: 1px solid white;
+  padding: 12px 32px 11px 31px;
+  text-transform: uppercase;
+}
+
+.lots {
+  margin-bottom: 120px;
+  padding: 0 24px;
+}
+
+.lots__heading {
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 46.96px;
+  text-transform: uppercase;
+  margin-bottom: 27px;
+  margin-left: 40px;
+}
+
+.lots__card-list {
+  color: rgb(255,255,255);
+  margin-bottom: 30px;
+  display: flex;
+  gap: 25px;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.lots__card-list-item {
+  list-style: none;
+  position: relative;
+  width: 334px;
+  height: 596px;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 550px 596px;
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 540px 596px;
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 170%;
+}
+
+.card-link {
+  text-decoration: none;
+  height: 100%;
+}
+
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 48px 40px;
+  height: 100%;
+}
+
+.card__title {
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 26.4px;
+  text-transform: uppercase;
+  text-decoration: underline;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 3px;
+}
+
+.lots__look-more-link {
+  margin-left: 40px;
+  text-decoration: none;
+  border-bottom: 1px solid black;
+}
+
+.about {
+  padding: 35px 24px 0;
+  display: grid;
+  grid-template-columns: 334px 1fr;
+  grid-template-rows: min-content min-content;
+  column-gap: 25px;
+  row-gap: 8px;
+}
+
+.about-logo {
+  background-color: rgba(0, 0, 0, 1);
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-self: center;
+  justify-self: center;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+
+.about-logo-image {
+  width: 148px;
+  height: auto;
+}
+
+.about-title {
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 46.96px;
+  text-transform: uppercase;
+  align-self: center;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+
+.about-text {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 2;
+  grid-row-end: 3;
+}
+
+.footer {
+  font-size: 18px;
+  margin-top: 180px;
+  padding: 0 50px 82px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.footer__address {
+  max-width: 264.57px;
+}
+
+.footer-menu {
+  line-height: 21.13px;
+  justify-self: center;
+}
+
+.footer-menu-list {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.footer-menu-item {
+  list-style: none;
+  text-align: center;
+}
+
+.footer-menu-link {
+  text-decoration: underline;
+  text-underline-offset: 3px;
+}
+/* для активной ссылки меню хедера и футера */
+.active {
+  text-decoration: none;
+}
+
+.footer-social-list {
+  justify-self: end;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 48px;
+  list-style: none;
+}
+
+.footer-social-list-item {
+  width: 48px;
+  height: 48px;
+}
+
