--- a/styles/style.css
+++ b/styles/style.css
@@ -1,29 +1,29 @@
 /* место для вашего кода */
 body {
+  color: rgb(0,0,0);
   font-weight: 400;
   font-size: 20px;
   line-height: 24px;
-  color: rgb(0,0,0);
 }
 
 .header {
-  padding: 92px 50px 96px;
-  font-size: 18px;
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
+  padding: 92px 50px 96px;
+  font-size: 18px;
 }
 
 
 .header-menu {
-  line-height: 21.13px;
   justify-self: start;
+  line-height: 21.13px;
 }
 
 .header__links-list {
   display: flex;
-  gap: 32px;
   flex-wrap: wrap;
+  gap: 32px;
 }
 
 .header__links-list-item {
@@ -65,52 +65,52 @@ body {
 }
 
 .phone {
-  text-decoration: none;
   border-bottom: 1px solid black;
+  text-decoration: none;
 }
 
 .email {
-  text-decoration: none;
   border-bottom: 1px solid black;
+  text-decoration: none;
 }
 
 .cover {
+  position: relative;
+  height: 100%;
+  min-height: 757px;
   margin-bottom: 180px;
   color: rgb(255,255,255);
   background-image: url(../images/cover.jpg);
   background-repeat: no-repeat;
-  background-size: 125% auto;
   background-position: center;
-  min-height: 757px;
-  height: 100%;
-  position: relative;
+  background-size: 125% auto;
 
 }
 /* используется и для секции cover и для сексии lots */
 .overlay {
   position: absolute;
+  z-index: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
-  z-index: 0;
 }
 
 .cover-content {
+  position: absolute;
+  min-width: 100%;
+  min-height: 100%;
   padding-top: 50px;
+  padding-right: 20px;
   padding-bottom: 50px;
   padding-left: 50px;
-  padding-right: 20px;
-  min-height: 100%;
-  min-width: 100%;
-  position: absolute;
 
 }
 
 .cover-title {
-  font-size: 100px;
-  font-weight: 700;
-  line-height: 115px;
   padding-top: 115px;
+  font-weight: 700;
+  font-size: 100px;
+  line-height: 115px;
 }
 
 .letter-spacing-extended {
@@ -126,8 +126,8 @@ body {
 }
 
 .aligned-text_center {
-  text-align: center;
   margin-bottom: 20px;
+  text-align: center;
 }
 
 .aligned-text_right {
@@ -135,12 +135,12 @@ body {
 }
 
 .cover__description {
-  padding-right: 30px;
-  margin-top: 106px;
-  font-size: 22px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: 106px;
+  padding-right: 30px;
+  font-size: 22px;
 }
 
 .cover__description-text {
@@ -150,13 +150,13 @@ body {
 }
 
 .bet-button {
-  line-height: 25.83px;;
-  font-weight: 500;
-  color: rgb(255,255,255);
-  background-color: rgba(255, 255, 255, 0);
   border: 1px solid white;
   padding: 12px 32px 11px 31px;
+  color: rgb(255,255,255);;
+  font-weight: 500;
+  line-height: 25.83px;
   text-transform: uppercase;
+  background-color: rgba(255, 255, 255, 0);
 }
 
 .lots {
@@ -165,28 +165,28 @@ body {
 }
 
 .lots__heading {
-  font-size: 40px;
-  font-weight: 700;
-  line-height: 46.96px;
-  text-transform: uppercase;
   margin-bottom: 27px;
   margin-left: 40px;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 46.96px;
+  text-transform: uppercase;
 }
 
 .lots__card-list {
-  color: rgb(255,255,255);
-  margin-bottom: 30px;
   display: flex;
-  gap: 25px;
-  justify-content: space-between;
   flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 25px;
+  margin-bottom: 30px;
+  color: rgb(255,255,255);
 }
 
 .lots__card-list-item {
-  list-style: none;
   position: relative;
   width: 334px;
   height: 596px;
+  list-style: none;
 }
 
 .card_type_film {
@@ -211,8 +211,8 @@ body {
 }
 
 .card-link {
-  text-decoration: none;
   height: 100%;
+  text-decoration: none;
 }
 
 .card {
@@ -220,49 +220,49 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 48px 40px;
   height: 100%;
+  padding: 48px 40px;
 }
 
 .card__title {
-  font-size: 22px;
   font-weight: 700;
+  font-size: 22px;
   line-height: 26.4px;
-  text-transform: uppercase;
   text-decoration: underline;
   text-decoration-thickness: 1px;
   text-underline-offset: 3px;
+  text-transform: uppercase;
 }
 
 .lots__look-more-link {
   margin-left: 40px;
-  text-decoration: none;
   border-bottom: 1px solid black;
+  text-decoration: none;
 }
 
 .about {
-  padding: 35px 24px 0;
   display: grid;
   grid-template-columns: 334px 1fr;
   grid-template-rows: min-content min-content;
-  column-gap: 25px;
   row-gap: 8px;
+  column-gap: 25px;
+  padding: 35px 24px 0;
 }
 
 .about-logo {
-  background-color: rgba(0, 0, 0, 1);
-  width: 240px;
-  height: 240px;
-  border-radius: 50%;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  align-self: center;
-  justify-self: center;
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 1;
   grid-row-end: 2;
+  justify-self: center;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 1);
 }
 
 .about-logo-image {
@@ -271,33 +271,33 @@ body {
 }
 
 .about-title {
-  font-size: 40px;
-  font-weight: 700;
-  line-height: 46.96px;
-  text-transform: uppercase;
-  align-self: center;
   grid-column-start: 2;
   grid-column-end: 3;
   grid-row-start: 1;
   grid-row-end: 2;
+  align-self: center;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 46.96px;
+  text-transform: uppercase;
 }
 
 .about-text {
   display: flex;
   flex-direction: column;
-  gap: 24px;
   grid-column-start: 2;
   grid-column-end: 3;
   grid-row-start: 2;
   grid-row-end: 3;
+  gap: 24px;
 }
 
 .footer {
-  font-size: 18px;
-  margin-top: 180px;
-  padding: 0 50px 82px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  margin-top: 180px;
+  padding: 0 50px 82px;
+  font-size: 18px;
 }
 
 .footer__address {
@@ -305,8 +305,8 @@ body {
 }
 
 .footer-menu {
-  line-height: 21.13px;
   justify-self: center;
+  line-height: 21.13px;
 }
 
 .footer-menu-list {
@@ -316,8 +316,8 @@ body {
 }
 
 .footer-menu-item {
-  list-style: none;
   text-align: center;
+  list-style: none;
 }
 
 .footer-menu-link {
@@ -330,9 +330,9 @@ body {
 }
 
 .footer-social-list {
-  justify-self: end;
   display: flex;
   flex-wrap: wrap;
+  justify-self: end;
   gap: 48px;
   list-style: none;
 }
