--- a/styles/style.css
+++ b/styles/style.css
@@ -152,7 +152,7 @@ body {
 .bet-button {
   border: 1px solid white;
   padding: 12px 32px 11px 31px;
-  color: rgb(255,255,255);;
+  color: rgb(255,255,255);
   font-weight: 500;
   line-height: 25.83px;
   text-transform: uppercase;
